--- a/cgv_photo_mobile_html/WebContent/css/phototicket.css
+++ b/cgv_photo_mobile_html/WebContent/css/phototicket.css
@@ -11,10 +11,17 @@
 .photo_ticket .btn_grey {position: relative; width: 115px; height: 34px; margin: 0 auto;display: block;border-radius: 18px;color: #999999;background-color: #ffffff;font-size: 14px;text-align: center;line-height: 32px;border: 1px solid #eeeeee;padding: 0;}
 .sprite.sprite-pt{content:''; background-image:url('../images/phototicket/common/phototicket@2x.png'); background-repeat: no-repeat; display: block; background-size: 200px;}
 .photo_ticket .btn-outline-red {display: inline-block; width: 135px; height: 44px; border-radius:22px; line-height: 42px; font-size: 16px; border: 1px solid var(--watermelon); color: var(--watermelon); font-weight: bold; letter-spacing: -2px;padding-left: 21px; background-color: #ffffff;}
-.photo_ticket .bt-red { display: inline-block; width: 135px; height: 44px; border-radius:22px; line-height: 42px; font-size: 16px; background-color: var(--watermelon); border: 1px solid var(--watermelon); color: #ffffff; font-weight: bold; letter-spacing: -2px;padding-left: 21px;}
+.photo_ticket .btn-red { display: inline-block; width: 135px; height: 44px; border-radius:22px; line-height: 42px; font-size: 16px; background-color: var(--watermelon); border: 1px solid var(--watermelon); color: #ffffff; font-weight: bold; letter-spacing: -2px;padding-left: 21px;}
+.photo_ticket .btn-red.btn-lg { width: 165px; height: 50px; line-height: 48px;border-radius: 25px;font-size: 18px}
 .photo_ticket .btn-grey { display: inline-block; width: 135px; height: 44px; line-height: 42px; font-size: 16px; background-color: #bebebe; border-radius: 22px;  color: #ffffff; font-weight: bold; letter-spacing: -2px;border: 1px solid #bebebe}
-.type_pt2 .btn-badge { display: inline-block; text-align: center; width: 125px; height: 25px; border-radius:12px; line-height: 25px; font-size: 12px; background-color: #ffffff; border: 1px solid var(--watermelon); color: var(--watermelon); font-weight: bold; letter-spacing: -2px;}
-.type_pt2 .btn-badge.active { display: inline-block; width: 125px; height: 25px; border-radius:12px; line-height: 23px; font-size: 12px; background-color: var(--watermelon); border: 1px solid var(--watermelon); color: #ffffff; font-weight: bold; letter-spacing: -2px;}
+.photo_ticket .btn-badge-red { display: inline-block; text-align: center; width: 125px; height: 25px; border-radius:12px; line-height: 25px; font-size: 12px; background-color: #ffffff; border: 1px solid var(--watermelon); color: var(--watermelon); font-weight: bold; letter-spacing: -2px;}
+.photo_ticket .btn-badge-grey { display: inline-block; text-align: center; width: 125px; height: 25px; border-radius:12px; font-weight: 500; line-height: 25px; font-size: 13px; background-color: #ffffff; border: 1px solid rgb(208,208,208); color: #222222; letter-spacing: -2px;}
+.photo_ticket .btn-badge-grey.active { display: inline-block; width: 125px; height: 25px; border-radius:12px; line-height: 23px; font-size: 12px; background-color: var(--watermelon); border: 1px solid var(--watermelon); color: #ffffff; font-weight: bold; letter-spacing: -2px;}
+.photo_ticket .btn-badge-grey .dday {position: relative; padding-right: 10px; letter-spacing: -1.4px;}
+.photo_ticket .btn-badge-grey .dday::after {content:''; position: absolute; height: 12px; border-right: 1px solid rgb(165,165,165); top: 2px; right: 4px;}
+.content_wrap.photo_ticket .cancel_area { padding-top: 2px !important; }
+.content_wrap.photo_ticket .cancel_area .btn-cancel { display: inline-block; padding-bottom: 2px; font-size: 13px; color: rgb(118,118,118);font-weight: 500; letter-spacing: -2px; border-bottom: 1px solid rgb(202,202,202)}
+
 
 /* [E]포토티켓 공통 */
 
@@ -72,7 +79,7 @@ body.scroll_popup .area_scroll{height:100%;overflow-y:scroll}
 #header_box {background-color: #ffffff; border: 0; z-index: 1111;}
 #header_box.pt_header {height: 47px; background-color:transparent; font-size: 16px; margin: 0; line-height: 47px; color: #000000;}
 #header_box.pt_header .title_area {position: absolute; left: 14px; top: 10px;}
-#header_box.pt_header .title_area .name { display: block; line-height: 34px; font-size: 17px; text-align: left; padding-left: 20px; width: 265px; text-overflow: ellipsis; overflow: hidden; white-space: nowrap}
+#header_box.pt_header .title_area .name { display: block; line-height: 30px; font-size: 17px; text-align: left; padding-left: 6px; width: 265px; text-overflow: ellipsis; overflow: hidden; white-space: nowrap;letter-spacing: -1.6px;}
 #header_box.pt_header .title {font-size: 16px; margin: 0;line-height: 47px;padding-left: 50px;color: #000000; text-align: left}
 #header_box.pt_header .badge {width: 219px;height: 30px;line-height: 28px;border-radius: 15px; color: #ffffff; margin: 14px auto 0;}
 #header_box.pt_header .badge.badge_blue { background: #209eff}
@@ -87,10 +94,10 @@ body.scroll_popup .area_scroll{height:100%;overflow-y:scroll}
 #header_box.pt_header .allview_wrap .allview_box_wrap .allview_header:before {right: 20px; left: auto}
 
 #header_box.pt_header nav.type_pt { position: relative; padding: 0 20px;}
-#header_box.pt_header nav.type_pt::after {content:''; position: absolute; width: 100%; height:0; left: 0; bottom: -37px; border-bottom: 1px solid #dddddd; z-index: 2;}
-#header_box.pt_header nav.type_pt::before {content:''; position: absolute; width: 100%; height:0; left: 0; bottom: -44px; border-bottom: 7px solid #f2f2f2; z-index: 1;}
+#header_box.pt_header nav.type_pt::after {content:''; position: absolute; width: 100%; height:0; left: 0; bottom: 5px; border-bottom: 1px solid #dddddd; z-index: 2;}
+#header_box.pt_header nav.type_pt::before {content:''; position: absolute; width: 100%; height:0; left: 0; bottom:0; border-bottom: 7px solid #f2f2f2; z-index: 1;}
 #header_box.pt_header nav.type_pt.active::before {content:none;}
-#header_box.pt_header nav.type_pt.active::after {bottom: -42px;}
+#header_box.pt_header nav.type_pt.active::after {bottom: 5px;}
 #header_box.pt_header nav.type_pt .inner { overflow: hidden }
 #header_box.pt_header nav.type_pt .inner a {color: #666666; font-size: 14px; margin-right: 20px; white-space: nowrap; font-weight: normal}
 #header_box.pt_header nav.type_pt .inner a:last-child {margin-right: 0}
@@ -100,22 +107,28 @@ body.scroll_popup .area_scroll{height:100%;overflow-y:scroll}
 #header_box.pt_header nav.type_pt .icon_search i {display: inline-block; vertical-align: sub;}
 #header_box.pt_header nav.type_pt .icon_search i.sprite-icFilterDateSel {}
 
+/** [S]
+	날짜 : 2020.04.24
+	작성자 : 이주연
+	내용 : nav의 유무에 따른 클래스 추가
+*/
+#header_box.pt_header.double { height: 94px;}
+/** [E] nav의 유무에 따른 클래스 추가 */
+
 #header_box.pt_header nav.type_pt2 { position: relative; padding: 0 20px;}
-#header_box.pt_header nav.type_pt2::after {content:''; position: absolute; width: 100%; height:0; left: 0; bottom: -37px; border-bottom: 1px solid #dddddd; z-index: 2;}
-#header_box.pt_header nav.type_pt2::before {content:''; position: absolute; width: 100%; height:0; left: 0; bottom: -44px; border-bottom: 7px solid #f2f2f2; z-index: 1;}
+#header_box.pt_header nav.type_pt2::after {content:''; position: absolute; width: 100%; height:0; left: 0; bottom: 5px; border-bottom: 1px solid #dddddd; z-index: 2;}
+#header_box.pt_header nav.type_pt2::before {content:''; position: absolute; width: 100%; height:0; left: 0; bottom:0; border-bottom: 7px solid #f2f2f2; z-index: 1;}
 #header_box.pt_header nav.type_pt2.active::before {content:none;}
+#header_box.pt_header nav.type_pt.active::after {bottom: 5px;}
 #header_box.pt_header nav.type_pt2 .inner { overflow: hidden }
 #header_box.pt_header nav.type_pt2 .inner a { position: relative; color: rgb(102,102,102); font-size: 14px; margin-right: 20px; white-space: nowrap; font-weight: normal; text-align: left; padding-left: 7px; width: auto}
 #header_box.pt_header nav.type_pt2 .inner a.active { color: #222222; border: 0}
 #header_box.pt_header nav.type_pt2 .inner a.active::after { content: ''; position: absolute; width: 3px; height: 3px; background-color: #222222; top: 20px; left: 0; border-radius: 50%;}
+#header_box.pt_header nav.type_pt2 .inner a.active:last-child::after {content: none;}
 #header_box.pt_header nav.type_pt2 .inner a:last-child {margin-right: 0}
-#header_box.pt_header nav.type_pt2 .inner .btn-badge {float: right;width: 125px;text-align: center;font-size: 12px;color: var(--watermelon);font-weight: 500; padding: 0; transform: translateY(9px);}
-#header_box.pt_header nav.type_pt2 .inner .btn-badge::after {content: none}
-
-
-
-
-
+#header_box.pt_header nav.type_pt2 .inner .btn-badge-red {float: right;width: 125px;text-align: center;font-size: 12px;color: var(--watermelon);font-weight: 500; padding: 0; transform: translateY(9px);}
+#header_box.pt_header nav.type_pt2 .inner .btn-badge-red.active {line-height: 26px;color: #ffffff}
+#header_box.pt_header nav.type_pt2 .inner .btn-badge-red::after {content: none}
 
 /* 포토티켓 메인 - app */
 .content_wrap.photo_ticket { padding-top: 47px; }
@@ -257,7 +270,7 @@ body.scroll_popup .area_scroll{height:100%;overflow-y:scroll}
 .popup.popup_share .popup_container .list  li .sns { display: inline-block; padding-left: 32px;}
 
 .content_wrap.photo_ticket .myPhtoticketFlip { padding-top: 11px; }
-.content_wrap.photo_ticket .myPhtoticketFlip .title_area .title {display:block; font-size: 20px; line-height: 24px; font-weight: bold; text-align: center; color: #222222; margin-bottom: 4px;}
+.content_wrap.photo_ticket .myPhtoticketFlip .title_area .title {display:block; font-size: 20px; line-height: 24px; font-weight: bold; text-align: center; color: #222222; margin-bottom: 4px;padding: 0 30px;text-overflow: ellipsis;overfl}
 .content_wrap.photo_ticket .myPhtoticketFlip .title_area .title-sm {display:block; font-size: 14px; line-height: 17px; text-align: center; color: rgb(137,137,137); margin-bottom: 15px;}
 .content_wrap.photo_ticket .myPhtoticketFlip.small .title_area .tip { display: block; color: var(--watermelon); font-size: 12px; line-height: 15px; text-align: center; }
 .content_wrap.photo_ticket .myPhtoticketFlip .title_area {}
@@ -272,9 +285,9 @@ body.scroll_popup .area_scroll{height:100%;overflow-y:scroll}
 
 /*.content_wrap.photo_ticket .myPhtoticketFlip .swiper-container .swiper-slide .front .dim {position: absolute; bottom: 0; left: 0; width:100%; height: 358px; border-radius: 12px; box-shadow: 0 6px 14px 0 rgba(0, 0, 0, 0.15); background-color: #ffffff;}*/
 .content_wrap.photo_ticket .myPhtoticketFlip .swiper-container .swiper-slide .flip-container .flipper {border-radius: 13px;transition: 0.6s;transform-style: preserve-3d;position: relative;}
-.content_wrap.photo_ticket .myPhtoticketFlip .swiper-container .swiper-slide .flip-container .flipper .front { padding: 13px; width: 235px; height: 358px; z-index: 2;border-radius: 12px; box-shadow: 0 6px 14px 0 rgba(0, 0, 0, 0.15);/* for firefox 31 */transform: rotateY(0deg);backface-visibility: hidden;}
-.content_wrap.photo_ticket .myPhtoticketFlip .swiper-container .swiper-slide .flip-container .flipper .front .inner { position: relative; height: 100% }
-.content_wrap.photo_ticket .myPhtoticketFlip .swiper-container .swiper-slide .flip-container .flipper .front img { width: 209px; height: 332px; border-radius: 8px; }
+.content_wrap.photo_ticket .myPhtoticketFlip .front { padding: 13px; width: 235px; height: 358px; z-index: 2;border-radius: 12px; box-shadow: 0 6px 14px 0 rgba(0, 0, 0, 0.15);/* for firefox 31 */transform: rotateY(0deg);backface-visibility: hidden;}
+.content_wrap.photo_ticket .myPhtoticketFlip .front .inner { position: relative; height: 100% }
+.content_wrap.photo_ticket .myPhtoticketFlip .front img { width: 209px; height: 332px; border-radius: 8px; }
 
 .content_wrap.photo_ticket .myPhtoticketFlip .swiper-container .swiper-slide .flip-container .flipper .back { position: absolute; top: 0; padding: 40px 18px 20px 18px; width: 235px; height: 358px; z-index: 2;border-radius: 12px; box-shadow: 0 6px 14px 0 rgba(0, 0, 0, 0.15);backface-visibility: hidden;transform: rotateY(180deg);}
 .content_wrap.photo_ticket .myPhtoticketFlip .swiper-container .swiper-slide .flip-container .flipper .back .inner { position: relative; height: 100%; text-align: left}
@@ -326,7 +339,15 @@ body.scroll_popup .area_scroll{height:100%;overflow-y:scroll}
 .content_wrap.photo_ticket .myPhtoticketFlip.web .swiper-container { width: 100%; overflow: auto; padding: 0 30px; }
 .content_wrap.photo_ticket .myPhtoticketFlip.web .swiper-container .swiper-slide { width: 260px; margin-right: 40px;}
 
+/*  포토티켓만 앞면만 있을 경우  */
+.content_wrap.photo_ticket .myPhtoticketFlip.onlyPhoto { padding: 12px 0 0;} /** padding: 12px 46px 0; */
+.content_wrap.photo_ticket .myPhtoticketFlip.onlyPhoto .front {width: 283px; height: 438px; margin: 0 auto 10px; /* width: 100%; height: 100%; **/ }
+.content_wrap.photo_ticket .myPhtoticketFlip.onlyPhoto .front .inner img {width: 100%; height: 100%; }
+.content_wrap.photo_ticket .myPhtoticketFlip.onlyPhoto .badge-area { text-align: center;margin-bottom: 15px; }
+.content_wrap.photo_ticket .myPhtoticketFlip.onlyPhoto .badge-area .btn-badge-grey{ text-align: center; width: 155px; }
 
+/*  포토티켓만 앞면만 있을 경우  */
+.content_wrap.photo_ticket .myPhtoticketFlip.onlyPhoto .front { width: 268px; height: 413px; margin: 0 auto 5px; }
 
 @media only screen and (max-width: 350px){
 	.photo_ticket .card_wrap .movie_info .info .title { font-size: 10px }
